// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (geleverd) 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          aria-labelledby=":r7:"
          class="ams-breadcrumb"
        >
          <h2
            aria-hidden="true"
            class="ams-visually-hidden"
            id=":r7:"
          >
            Kruimelpad
          </h2>
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/3917854581"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (geleverd)
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Hulp bij het huishouden (geleverd)
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <section>
            <h3
              class="ams-heading ams-heading--2 ams-mb-m"
            >
              Status
            </h3>
            <ol
              class="ams-progress-list ams-progress-list--heading-3"
            >
              <li
                aria-label="Status Afgerond"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--collapsed ams-progress-list__step--completed"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":r8:"
                      aria-expanded="false"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Klaar: 
                      </span>
                      Besluit
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":r8:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime="2022-01-15"
                    >
                      15 januari 2022
                    </time>
                    <div>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                U heeft recht op hulp bij het huishouden (geleverd) per 15 december 2021.
              
                      </p>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                        <u>
                          hoe u van aanbieder kunt wisselen.
                        </u>
                        
                  
              
                      </p>
                      
            
                    </div>
                    <p
                      class="ams-paragraph"
                    >
                      
            
                      <strong>
                        
              U krijgt dit besluit per post.
            
                      </strong>
                      
          
                    </p>
                  </div>
                </div>
              </li>
              <li
                aria-current="step"
                aria-label="Huidige status"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--current"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    >
                      <span
                        class="ams-icon ams-icon--inverse"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m13.342 6.673 1.42-1.423L21.5 12l-6.738 6.75-1.42-1.423 4.312-4.32H2.5v-2.013h15.154z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":r9:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Bezig: 
                      </span>
                      Levering gestart
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":r9:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (geleverd).
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-label="Toekomstige status"
                class="_Step_5b0b8a ams-progress-list__step"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":ra:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Levering gestopt
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":ra:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Niet van toepassing.
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-label="Toekomstige status"
                class="_Step_5b0b8a ams-progress-list__step"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":rb:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Einde recht
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":rb:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Uw recht op hulp bij het huishouden (geleverd) is beëindigd per 
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ol>
          </section>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (gestopt) 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          aria-labelledby=":rh:"
          class="ams-breadcrumb"
        >
          <h2
            aria-hidden="true"
            class="ams-visually-hidden"
            id=":rh:"
          >
            Kruimelpad
          </h2>
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/8927959"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (gestopt)
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Hulp bij het huishouden (gestopt)
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <section>
            <h3
              class="ams-heading ams-heading--2 ams-mb-m"
            >
              Status
            </h3>
            <ol
              class="ams-progress-list ams-progress-list--heading-3"
            >
              <li
                aria-label="Status Afgerond"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--collapsed ams-progress-list__step--completed"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":ri:"
                      aria-expanded="false"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Klaar: 
                      </span>
                      Besluit
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":ri:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime="2022-01-15"
                    >
                      15 januari 2022
                    </time>
                    <div>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                U heeft recht op hulp bij het huishouden (gestopt) per 15 december 2021.
              
                      </p>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                In de brief leest u ook hoe u bezwaar kunt maken of een klacht kan
              indienen.
              
                      </p>
                      
            
                    </div>
                    <p
                      class="ams-paragraph"
                    >
                      
            
                      <strong>
                        
              U heeft dit besluit per post ontvangen.
            
                      </strong>
                      
          
                    </p>
                  </div>
                </div>
              </li>
              <li
                aria-label="Status Afgerond"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--collapsed ams-progress-list__step--completed"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":rj:"
                      aria-expanded="false"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Klaar: 
                      </span>
                      Levering gestart
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":rj:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (gestopt).
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-label="Status Afgerond"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--collapsed ams-progress-list__step--completed"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":rk:"
                      aria-expanded="false"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Klaar: 
                      </span>
                      Levering gestopt
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":rk:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Emile Thuiszorg heeft aan ons doorgegeven dat u geen hulp bij het huishouden (gestopt)
            meer krijgt.
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-current="step"
                aria-label="Huidige status"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--current"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    >
                      <span
                        class="ams-icon ams-icon--inverse"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m13.342 6.673 1.42-1.423L21.5 12l-6.738 6.75-1.42-1.423 4.312-4.32H2.5v-2.013h15.154z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":rl:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Bezig: 
                      </span>
                      Einde recht
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":rl:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime="2022-01-22"
                    >
                      22 januari 2022
                    </time>
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Uw recht op hulp bij het huishouden (gestopt) is beëindigd per 22 januari 2022
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ol>
          </section>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (nog niet geleverd) 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          aria-labelledby=":r2:"
          class="ams-breadcrumb"
        >
          <h2
            aria-hidden="true"
            class="ams-visually-hidden"
            id=":r2:"
          >
            Kruimelpad
          </h2>
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/102996420"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (nog niet geleverd)
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Hulp bij het huishouden (nog niet geleverd)
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <section>
            <h3
              class="ams-heading ams-heading--2 ams-mb-m"
            >
              Status
            </h3>
            <ol
              class="ams-progress-list ams-progress-list--heading-3"
            >
              <li
                aria-current="step"
                aria-label="Huidige status"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--current"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    >
                      <span
                        class="ams-icon ams-icon--inverse"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m13.342 6.673 1.42-1.423L21.5 12l-6.738 6.75-1.42-1.423 4.312-4.32H2.5v-2.013h15.154z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":r3:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Bezig: 
                      </span>
                      Besluit
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":r3:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime="2022-01-15"
                    >
                      15 januari 2022
                    </time>
                    <div>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                U heeft recht op hulp bij het huishouden (nog niet geleverd) per 15 januari 2022.
              
                      </p>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                        <u>
                          hoe u van aanbieder kunt wisselen.
                        </u>
                        
                  
              
                      </p>
                      
            
                    </div>
                    <p
                      class="ams-paragraph"
                    >
                      
            
                      <strong>
                        
              U krijgt dit besluit per post.
            
                      </strong>
                      
          
                    </p>
                  </div>
                </div>
              </li>
              <li
                aria-label="Toekomstige status"
                class="_Step_5b0b8a ams-progress-list__step"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":r4:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Levering gestart
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":r4:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (nog niet geleverd).
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-label="Toekomstige status"
                class="_Step_5b0b8a ams-progress-list__step"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":r5:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Levering gestopt
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":r5:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Niet van toepassing.
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-label="Toekomstige status"
                class="_Step_5b0b8a ams-progress-list__step"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":r6:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Einde recht
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":r6:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Uw recht op hulp bij het huishouden (nog niet geleverd) is beëindigd per 
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ol>
          </section>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Hulp bij het huishouden (tijdelijk gestopt) 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          aria-labelledby=":rc:"
          class="ams-breadcrumb"
        >
          <h2
            aria-hidden="true"
            class="ams-visually-hidden"
            id=":rc:"
          >
            Kruimelpad
          </h2>
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/879359140"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Hulp bij het huishouden (tijdelijk gestopt)
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Hulp bij het huishouden (tijdelijk gestopt)
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Emile Thuiszorg
            </dd>
          </dl>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <section>
            <h3
              class="ams-heading ams-heading--2 ams-mb-m"
            >
              Status
            </h3>
            <ol
              class="ams-progress-list ams-progress-list--heading-3"
            >
              <li
                aria-label="Status Afgerond"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--collapsed ams-progress-list__step--completed"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":rd:"
                      aria-expanded="false"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Klaar: 
                      </span>
                      Besluit
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":rd:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime="2022-01-15"
                    >
                      15 januari 2022
                    </time>
                    <div>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                U heeft recht op hulp bij het huishouden (tijdelijk gestopt) per 15 december 2021.
              
                      </p>
                      
              
                      <p
                        class="ams-paragraph"
                      >
                        
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                        <u>
                          hoe u van aanbieder kunt wisselen.
                        </u>
                        
                  
              
                      </p>
                      
            
                    </div>
                    <p
                      class="ams-paragraph"
                    >
                      
            
                      <strong>
                        
              U krijgt dit besluit per post.
            
                      </strong>
                      
          
                    </p>
                  </div>
                </div>
              </li>
              <li
                aria-label="Status Afgerond"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--collapsed ams-progress-list__step--completed"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":re:"
                      aria-expanded="false"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Klaar: 
                      </span>
                      Levering gestart
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":re:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (tijdelijk gestopt).
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-current="step"
                aria-label="Huidige status"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--current"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    >
                      <span
                        class="ams-icon ams-icon--inverse"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m13.342 6.673 1.42-1.423L21.5 12l-6.738 6.75-1.42-1.423 4.312-4.32H2.5v-2.013h15.154z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":rf:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Bezig: 
                      </span>
                      Levering gestopt
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":rf:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime=""
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Niet van toepassing.
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-label="Toekomstige status"
                class="_Step_5b0b8a ams-progress-list__step"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    />
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":rg:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Einde recht
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":rg:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                    />
                    <div>
                      <p
                        class="ams-paragraph"
                      >
                        
            Uw recht op hulp bij het huishouden (tijdelijk gestopt) is beëindigd per 
          
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ol>
          </section>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`<Zorg /> > Matches the Full Page snapshot for item Wmo item 1 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          aria-labelledby=":r0:"
          class="ams-breadcrumb"
        >
          <h2
            aria-hidden="true"
            class="ams-visually-hidden"
            id=":r0:"
          >
            Kruimelpad
          </h2>
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning"
              >
                Zorg en ondersteuning
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/zorg-en-ondersteuning/voorziening/wmo-item-1"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Wmo item 1
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Wmo item 1
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <dl
            class="_Datalist_240c86"
          >
            <dt
              class="_Datalist__title_240c86"
            >
              Aanbieder
            </dt>
            <dd
              class="_Datalist__description_240c86"
            >
              Mantelzorg B.V
            </dd>
          </dl>
        </div>
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <section>
            <h3
              class="ams-heading ams-heading--2 ams-mb-m"
            >
              Status
            </h3>
            <ol
              class="ams-progress-list ams-progress-list--heading-3"
            >
              <li
                aria-current="step"
                aria-label="Huidige status"
                class="_Step_5b0b8a ams-progress-list__step ams-progress-list__step--current"
              >
                <div
                  class="ams-progress-list__indicator"
                >
                  <div
                    class="ams-progress-list__marker"
                  >
                    <span
                      class="ams-progress-list__marker-shape"
                    >
                      <span
                        class="ams-icon ams-icon--inverse"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m13.342 6.673 1.42-1.423L21.5 12l-6.738 6.75-1.42-1.423 4.312-4.32H2.5v-2.013h15.154z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <span
                    class="ams-progress-list__connector"
                  />
                </div>
                <div
                  class="ams-progress-list__content"
                >
                  <h3
                    class="ams-heading ams-heading--3 ams-progress-list__heading"
                  >
                    <button
                      aria-controls=":r1:"
                      aria-expanded="true"
                      class="ams-progress-list__button"
                      type="button"
                    >
                      <span
                        class="ams-icon ams-icon--heading-3 ams-progress-list__icon"
                        hidden=""
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2.5 7.911 12 17.5l9.5-9.589L20.102 6.5 12 14.677 3.898 6.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="ams-visually-hidden"
                      >
                        Bezig: 
                      </span>
                      Levering gestart
                    </button>
                  </h3>
                  <div
                    class="ams-progress-list__panel"
                    id=":r1:"
                  >
                    <time
                      class="_StepStatusDate_5b0b8a"
                      datetime="2020-07-24"
                    >
                      24 juli 2020
                    </time>
                    <div>
                      De levering van uw thuizorg is gestart
                    </div>
                  </div>
                </div>
              </li>
            </ol>
          </section>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
